istioctl/web_v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    version: v2
  name: web-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
        version: v2
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webroot
          mountPath: /usr/share/nginx/html
      volumes:
        - name: webroot
          configMap:
            name: web-cm-v2
