istioctl/web_v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: routesvc
  name: routesvc
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    version: v1
  name: web-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webroot
          mountPath: /usr/share/nginx/html
      volumes:
        - name: webroot
          configMap:
            name: web-cm-v1
